--- a/home.html
+++ b/home.html
@@ -104,7 +104,7 @@
 
 
     <!-- section1 showcase start  -->
-    <section class="text-light  p-5  pt-lg-5" id="sec1">
+    <section class="text-light  py-4  pt-lg-5" id="sec1">
     </div>
     <div class="container text-center d-block">
         <div>
@@ -134,7 +134,7 @@
                     <p class="card-text">
                         Exactly 1 hour to find a way out and get out of the quest of the room , thinking all
                         the fun and interesting puzzles on your heroic journey.</p>
-                    <a href="#" class="btn btn-primary">Get Started</a>
+                    <a href="#" class="btn btn-lg btn-primary">Get Started</a>
                 </div>
             </div>
         </div>
@@ -148,7 +148,7 @@
                     <p class="card-text">
                         Exactly 1 hour to find a way out and get out of the quest of the room , thinking all
                         the fun and interesting puzzles on your heroic journey.</p>
-                    <a href="#" class="btn btn-primary">Get Started</a>
+                    <a href="#" class="btn btn-lg btn-primary">Get Started</a>
                 </div>
             </div>
         </div>
@@ -162,7 +162,7 @@
                     <p class="card-text">
                         Exactly 1 hour to find a way out and get out of the quest of the room , thinking all
                         the fun and interesting puzzles on your heroic journey.</p>
-                    <a href="#" class="btn btn-primary">Get Started</a>
+                    <a href="#" class="btn btn-lg btn-primary">Get Started</a>
                 </div>
             </div>
         </div>
@@ -172,7 +172,7 @@
 
 
     <!-- section 2 -->
-    <section class="text-light text-center text-lg-left p-5" id="sec2">
+    <section class="text-light text-center text-lg-left p-4" id="sec2">
         <div class="container">
 
             <div class="card-group">
@@ -215,7 +215,7 @@
         </div>
     </section>
 
-    <section class="text-light p-5 text-center"id="cock">
+    <section class="text-light p-4 text-center"id="cock">
         <div class="container">
             <div class="row" id="row1">
                 <div class="col-sm p-4">
@@ -235,7 +235,7 @@
         </div>
     </section>
 <!--car wash section start -->
-    <section class="text-light p-5  text-lg-left d-sm-block d-lg-flex text-center"id="sec4">
+    <section class="text-light p-4  text-lg-left d-sm-block d-lg-flex text-center"id="sec4">
         <div class="container">
                     <h2 class="carh2 display-5 ">GET YOUR CAR <span
                             class="text-warning">SPARKLING</span></h2>
@@ -260,7 +260,7 @@
 
 
    <!-- Question Accordion -->
-   <section class="text-light p-5 text-center text-lg-left bg-primary">
+   <section class="text-light p-4 text-center text-lg-left bg-primary">
     <div class="container pt-5 mt-5">
         <div class="d-sm-flex d-sm-block">
             <div>
@@ -271,11 +271,13 @@
                     nisi
                     voluptates, <br>hic
                     illo voluptatibus accusamus, corrupti voluptate libero accusantium incidunt fuga</p>
-                <button class="btn btn-warning btn-lg text-center text-lg-left">Click To Contact Us For More Details
+                <button class="btn btn-warning btn-lg text-center text-lg-left">Contact Us For More Details
                 </button>
             </div> <br>
-            <img class="img-fluid d-sm-flex w-50 mt-md-4" src="image/Onlim-Chatbot-Conversation.png" alt="beer">
+            <img class="img-fluid d-none d-lg-flex w-50 mt-md-4" src="image/Onlim-Chatbot-Conversation.png" alt="beer">
         </div>
+            <img class="img-fluid d-sm-none w-100 mt-md-4" src="image/Onlim-Chatbot-Conversation.png" alt="beer">
+          </div>
   <br><br><br>
   
    <!-- Question Accordion -->
@@ -330,7 +332,7 @@
   
    <!-- newsletter -->
    <br><br>
-    <div class="container p-lg-0">
+    <div class="container p-lg-">
       <div class="d-md-flex justify-content-between align-items-center">
         <h3 class=" mb-md-0 text-sm-center text-lg-right pb-3 ">Sign Up For Our Newsletter</h3>
         <div class="input-group news-input">
@@ -378,11 +380,10 @@
   
   <!-- footer -->
   
-  <footer class="footer p-5 text-white text-center d-flex">
+  <footer class="footer p-4 text-white text-center d-flex">
     <div class="container">
         <h2 class="display-6">ADD ANY EXTRA INFORMATION INSIDE THE FOOTER AREA</h2>
-        <a class="navbar-brand d-sm-block d-sm-none" href="#">
-            <img src="image/logo.png" width="250" height="200" alt="logo" loading="lazy">
+        <a class="navbar-brand" href="home.html"><u>BMarKZ GARDEN</u>
         </a>
         <div class="row g-3">
             <div class="col-md">
