--- a/Services.html
+++ b/Services.html
@@ -67,9 +67,9 @@
 <!-- end of navbar --> 
 
 
-<section class="text-light p-5 p-lg-0 pt-lg-5 text-center text-lg-left " id="services">
+<section class="text-light p-4  pt-5 text-sm-center text-lg-left " id="services">
     <div class="container pt-5 mt-lg-4">
-        <div class="d-sm-flex d-sm-block">
+        <div class="d-sm-flex pt-5 d-sm-block">
             <div>
                 <h2 class="carh2 display-5 text-center text-lg-left ">Our Exclusive <span
                         class="text-warning">Services</span></h2>
@@ -78,11 +78,13 @@
                     nisi
                     voluptates, <br>hic
                     illo voluptatibus accusamus, corrupti voluptate libero accusantium incidunt fuga</p>
-                <button class="btn btn-primary btn-lg text-center text-lg-left">Click To Contact Us For More Details
+                <button class="btn btn-primary btn-lg text-center text-lg-left">Contact Us For More Details
                 </button>
             </div> <br>
-            <img class="img-fluid d-sm-flex w-50 mt-md-4" src="image/chatbot-app.png" alt="beer">
+            <img class="img-fluid d-none d-lg-flex w-50 mt-md-4" src="image/chatbot-app.png" alt="chatbot">
         </div>
+            <img class="img-fluid d-sm-none w-100 mt-md-4" src="image/chatbot-app.png" alt="chatbot">
+          </div>
 <br><br><br>
 
 <!-- services we render-->
@@ -128,7 +130,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        
         <!-- row2 -->
         <br><br>
         <div class="row g-3 d-flex  "id="contactrow">
@@ -178,11 +180,10 @@
 <!-- footer -->
 
 <footer class="footer p-5 text-white text-center d-flex">
-    <div class="container">]
+    <div class="container">
         
-        <h2 class="display-6">ADD ANY EXTRA INFORMATION INSIDE THE FOOTER AREA</h2>
-        <a class="navbar-brand d-sm-block d-sm-none" href="#">
-            <img src="image/logo.png" width="250" height="200" alt="logo" loading="lazy">
+        <h4 class="display-6">ADD ANY EXTRA INFORMATION INSIDE THE FOOTER AREA</h4>
+        <a class="navbar-brand" href="home.html"><h2 class="display-5"><u>BMarKZ GARDEN</u></h2>
         </a>
         <div class="row g-3">
             <div class="col-md">
