--- a/home.html
+++ b/home.html
@@ -120,9 +120,7 @@
             <button class="btn btn-primary btn-lg">Start The Enrollment
             </button>
         </div>
-        <img class="img-fluid ;;. w-50 mt-4" src="image/pngegg.png" alt="beer">
-    </div>
-
+        
     <!-- col 1 start -->
 
     <div class="row text-center text-lg-left pt-lg-5 d-sm-flex">
@@ -193,7 +191,8 @@
                     </div>
                 </div>
 
-                <img src="image/wine.png" class="img-fluid" alt="Responsive image">
+                <img src="image/wine.png" class="img-fluid d-lg-none w-50" alt="Responsive image">
+                <img src="image/wine.png" class="img-fluid d-none d-lg-flex" alt="Responsive image">
 
                 <div class="card border-0">
                     <img src="image/tab-img-2.jpg" class="card-img-top " alt="...">
@@ -259,7 +258,7 @@
    <!-- newsletter and contact -->
 
 
-   <!-- Question Accordion -->
+   
    <section class="text-light p-4 text-center text-lg-left bg-primary">
     <div class="container pt-5 mt-5">
         <div class="d-sm-flex d-sm-block">
@@ -282,7 +281,7 @@
   
    <!-- Question Accordion -->
   
-   <div class="accordion" id="cardaccordion">
+   <div class="accordion" id="accordionhome">
     <div class="card">
       <div class="card-header" id="headingOne">
         <h2 class="mb-0">
