--- a/Contact.html
+++ b/Contact.html
@@ -81,7 +81,7 @@
               <button class="btn btn-warning  mr-4 btn-lg text-center text-lg-left">Contact Us For More Details
               </button>
           </div> <br>
-          <img class="img-fluid  d-sm-none d-lg-block  w-50 mt-md-4" src="image/Onlim-Chatbot-Conversation.png" alt="beer">
+          <img class="img-fluid  d-none d-lg-block  w-50 mt-md-4" src="image/Onlim-Chatbot-Conversation.png" alt="beer">
       </div>
           <img class="img-fluid w-100 d-lg-none d- mt-md-4" src="image/Onlim-Chatbot-Conversation.png" alt="beer">
       
